Move BaseEntity to common module and update OrderEntity